--- a/index.html
+++ b/index.html
@@ -4,6 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Links</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: rgba(255, 228, 196, 0.68);
+        }
+        header {
+            background-color: brown;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            padding: 20px;
+            background-color: rgba(194, 162, 121, 0.895);
+        }
+        nav a {
+            text-decoration: none;
+            margin: 0 10px;
+            color: #333;
+        }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+            padding: 15px;
+        }
+        .gallery img {
+            width: 300px;
+            height: 250px;
+            border-radius: 10px;
+            object-fit: cover;
+        }
+        .menu {
+            text-align: center;
+            padding: 20px;
+        }
+        .menu ul {
+            list-style-type: none;
+            padding: 0;
+            color: black;
+        }
+        .menu li {
+            margin-bottom: 10px;
+    
+        }
+    </style>
 </head>
 <body>
     <header>
