Update index.html file

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     <section id="home">
         <h2>Home</h2>
         <p>Welcome to our website! Check out the latest in technology.</p>
-        <a href="https://www.google.com"><img src="images/technology.jpg" alt="Technology Image" width="300" height="250" style="border-radius: 10px;"></a>
+        <a href="https://www.google.com"><img src="assets/technology.jpg" alt="Technology Image" width="300" height="250" style="border-radius: 10px;"></a>
     </section>
 
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery">
-            <a href="https://www.google.com"><img src="images/nature1.jpg" alt="Nature Image"></a>
-            <a href="https://www.google.com"><img src="images/nature2.jpg" alt="Nature Image"></a>
-            <a href="https://www.google.com"><img src="images/nature3.jpg" alt="Nature Image"></a>
+            <a href="https://www.google.com"><img src="assets/nature1.jpg" alt="Nature Image"></a>
+            <a href="https://www.google.com"><img src="assets/nature2.jpg" alt="Nature Image"></a>
+            <a href="https://www.google.com"><img src="assets/nature3.jpg" alt="Nature Image"></a>
         </div>
     </section>
 
@@ -84,9 +84,9 @@
         <h2>Menu</h2>
         <div class="menu">
             <ul>
-                <li><a href="https://images.pexels.com/photos/1099680/pexels-photo-1099680.jpeg?auto=compress&cs=tinysrgb&w=600"><img src="images/food1.jpg" alt="Fruit Salad" width="300" height="250" style="border-radius: 10px;"> A Plate of Fruit Salad </a></li>
-                <li><a href="https://www.pexels.com/photo/cooked-seafoods-699953/"><img src="images/food2.jpg" alt="A Plate of Noddles" width="300" height="250" style="border-radius: 10px;"> A Plate of Noddles</a></li>
-                <li><a href="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&w=600"><img src="images/food3.jpg" alt="Pancakes" width="300" height="250" style="border-radius: 10px;"> A Plate of Pancakes</a></li>
+                <li><a href="https://images.pexels.com/photos/1099680/pexels-photo-1099680.jpeg?auto=compress&cs=tinysrgb&w=600"><img src="assets/food1.jpg" alt="Fruit Salad" width="300" height="250" style="border-radius: 10px;"> A Plate of Fruit Salad </a></li>
+                <li><a href="https://www.pexels.com/photo/cooked-seafoods-699953/"><img src="assets/food2.jpg" alt="A Plate of Noddles" width="300" height="250" style="border-radius: 10px;"> A Plate of Noddles</a></li>
+                <li><a href="https://images.pexels.com/photos/376464/pexels-photo-376464.jpeg?auto=compress&cs=tinysrgb&w=600"><img src="assets/food3.jpg" alt="Pancakes" width="300" height="250" style="border-radius: 10px;"> A Plate of Pancakes</a></li>
             </ul>
         </div>
     </section>
